Fixed lazyLOAD not working on mobile issue

--- a/app/assets/scss/_herbs.scss
+++ b/app/assets/scss/_herbs.scss
@@ -72,6 +72,8 @@
 
 #herbLIST {
   padding: 0 10px;
+  display: inline-block;
+  width: 100%;
   .herbITEM {
     cursor: pointer;
     display: inline-block;
